# mybot

./: .gitignore  README.md  anketa.py  bot.py  cities.csv  city_game_bot.py  handlers.py  menu.py  pyproject.toml  requirements.txt  setup.cfg  utils.py
